Image Responsiveness Bug Fixes
Fixes a few issues with responsive images. iPad sized screens will still
show distorted images until I sort this out.

--- a/Brotherhood Revised/css/style.css
+++ b/Brotherhood Revised/css/style.css
@@ -397,7 +397,8 @@ p {
         margin-top:0;
     }
     .whoSectionHero {
-        width:auto;
+        width: calc(50% - 22px);
+        max-height: calc(165px - 20px);
     }
     .aboutSectionHero {
         width: calc(100% - 20px);
